# openai-usage-mcp

./: LICENSE  README.md  pyproject.toml
src/openai_usage_mcp/: __init__.py  client.py  server.py
tests/: test_client.py  test_server.py
