[project]
name = "openai-usage-mcp"
version = "0.1.0"
description = "MCP server for OpenAI platform usage and cost data"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14.0",
    "httpx>=0.27.0",
]

[project.scripts]
openai-usage-mcp = "openai_usage_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openai_usage_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
]
